{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 10,
  "lineage": "422fbae4-11e3-814d-2cd2-9fd633971fee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:372414732884:security-group/sg-0c00adadefa12bd43",
            "description": "Database security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c00adadefa12bd43",
            "ingress": [],
            "name": "nodejs-database20230718092156413800000001",
            "name_prefix": "nodejs-database",
            "owner_id": "372414732884",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f10c3a021b47323"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nodejs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic.",
            "from_port": 0,
            "id": "sgrule-1306896009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c00adadefa12bd43",
            "security_group_rule_id": "sgr-06a14fcd866cb573b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_vpc.nodejs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:372414732884:subnet/subnet-022f91a5932871c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022f91a5932871c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "372414732884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-subnet"
            },
            "tags_all": {
              "Name": "nodejs-subnet"
            },
            "vpc_id": "vpc-00f10c3a021b47323"
          },
          "dependencies": [
            "aws_vpc.nodejs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodejs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:372414732884:vpc/vpc-00f10c3a021b47323",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094a9b17c52bf63b6",
            "default_route_table_id": "rtb-0922225401082769b",
            "default_security_group_id": "sg-0b1fadcf8eb24cb71",
            "dhcp_options_id": "dopt-090f2d3a0f590c593",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f10c3a021b47323",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0922225401082769b",
            "owner_id": "372414732884",
            "tags": {
              "Name": "nodejs-VPC"
            },
            "tags_all": {
              "Name": "nodejs-VPC"
            }
          }
        }
      ]
    }
  ]
}